# cardreaders

./: Cargo.toml
card_less_reader/: Cargo.toml
card_less_reader/src/: device.rs  error.rs  lib.rs  tag_value.rs  tlv_parser.rs
card_reader/: Cargo.toml
test_app/: Cargo.toml
test_app/src/: main.rs
tlv_parser/: Cargo.toml
undefine_nfc_reader/: Cargo.toml
undefine_nfc_reader/src/: command.rs  error.rs  frame_channel.rs  lib.rs  message_channel.rs  number.rs  tlv.rs  tlv_channel.rs  tlv_handler.rs  tlv_queue.rs
uno8_nfc_reader/: Cargo.toml
uno8_nfc_reader/src/: device.rs  device_builder.rs  error.rs  hid_message_channel.rs  lib.rs  message_channel.rs  tag_value.rs  tlv_parser.rs
