[package]
name = "card_reader"
version = "0.1.0"
authors = ["nigma143 <nigma143@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card_less_reader = { path = "../card_less_reader" }
uno8_nfc_reader = { path = "../uno8_nfc_reader" }
