[package]
name = "undefine_nfc_reader"
version = "0.1.0"
authors = ["И <nigma143@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = ""
cancellation = ""
thiserror = ""
tlv_parser = ""
byteorder = ""
log = ""